# verifying-email-binder

./: .env.sample  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
migrations/: 1_bind_code.sql
src/: lib.rs  main.rs
src/contracts/: guardian.rs
src/rpc/: error.rs  request.rs  response.rs
src/server/: handler.rs
src/service/: code.rs  email.rs  error.rs  mod.rs  serde_helpers.rs  verify.rs
