[package]
name = "verifying-email-binder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = "0.5"
chrono = { version = "0.4.26", features = ["serde"] }
ethers = { version = "2.0.9", features = ["ethers-solc"] }
eyre = "0.6.8"
futures = "0.3.28"
hyper = "0.14.27"
lettre = "0.10.4"
rand = "0.8.5"
regex = "1.9.5"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "chrono", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors", "trace"] }
tracing = "0.1.37"
